Set text anti-aliasing settings at PPAPI plugin process on Windows.

This patch will enable text anti-aliasing to call the following methods:
* blink::WebFontRendering::setAntialiasedTextEnabled
* blink::WebFontRendering::setLCDTextEnabled

This patch will also get anti-aliasing settings from
gfx::GetFontRenderParams method.

BUG=615375
TEST=If [Smooth edges of screen fonts] at advanced system settings is
enabled, text in flash is anti-aliased. If disabled, text is aliased.

Review-Url: https://codereview.chromium.org/2048563004
Cr-Commit-Position: refs/heads/master@{#399073}