content/ppapi_plugin/ppapi_plugin_main.cc
@@ -33,6 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/WebKit/public/web/win/WebFontRendering.h"
 #include "third_party/skia/include/ports/SkTypeface_win.h"
 #include "ui/display/win/dpi.h"
+#include "ui/gfx/font_render_params.h"
 #include "ui/gfx/win/direct_write.h"
 #endif
 
@@ -133,6 +134,13 @@ int PpapiPluginMain(const MainFunctionParams& parameters) {
   InitializeDWriteFontProxy();
 
   blink::WebFontRendering::setDeviceScaleFactor(display::win::GetDPIScale());
+
+  const gfx::FontRenderParams font_params =
+      gfx::GetFontRenderParams(gfx::FontRenderParamsQuery(), nullptr);
+  blink::WebFontRendering::setAntialiasedTextEnabled(font_params.antialiasing);
+  blink::WebFontRendering::setLCDTextEnabled(
+      font_params.subpixel_rendering !=
+      gfx::FontRenderParams::SUBPIXEL_RENDERING_NONE);
 #endif
 
   main_message_loop.Run();
